--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "simplemde": "^1.11.2",
     "vue": "^2.2.2",
+    "vue-router": "^2.4.0",
     "vue-simplemde": "^0.3.7"
   },
   "devDependencies": {
