--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "simplemde": "^1.11.2",
     "vue": "^2.2.2",
     "vue-router": "^2.4.0",
