--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "nprogress": "^0.2.0",
     "simplemde": "^1.11.2",
     "vue": "^2.2.2",
+    "vue-progressbar": "^0.7.1",
     "vue-router": "^2.4.0",
     "vue-simplemde": "^0.3.7"
   },
