--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "server": "node server/server.js"
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "file-stream-rotator": "^0.1.0",
+    "morgan": "^1.8.1",
+    "serve-favicon": "^2.4.2",
     "simplemde": "^1.11.2",
     "vue": "^2.2.2",
     "vue-progressbar": "^0.7.1",
