--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.8.1",
     "serve-favicon": "^2.4.2",
     "simplemde": "^1.11.2",
+    "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.2.2",
     "vue-progressbar": "^0.7.1",
     "vue-router": "^2.4.0",
