--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "file-stream-rotator": "^0.1.0",
+    "jsonwebtoken": "^7.4.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
     "serve-favicon": "^2.4.2",
