--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "file-stream-rotator": "^0.1.0",
+    "hbs": "^4.0.1",
+    "html-trim": "^1.2.0",
     "jsonwebtoken": "^7.4.1",
+    "marked": "^0.3.6",
     "moment": "^2.18.1",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
     "serve-favicon": "^2.4.2",
     "simplemde": "^1.11.2",
-    "vee-validate": "^2.0.0-rc.3",
+    "simplemde-theme-base": "^0.1.2",
+    "trim-html": "^0.1.9",
     "vue": "^2.2.2",
     "vue-progressbar": "^0.7.1",
     "vue-router": "^2.4.0",
-    "vue-simplemde": "^0.3.7"
+    "vue-simplemde": "^0.3.7",
+    "vuedraggable": "^2.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
