移除服务端代码，整理到autumn项目

--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
-  "name": "makedown",
+  "name": "autumn",
   "version": "1.0.0",
-  "description": "this is my mackdown",
+  "description": "this is my autumn blog",
   "author": "1351207341 <1351207341@qq.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "server": "node server/server.js"
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "body-parser": "^1.17.1",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.15.2",
-    "file-stream-rotator": "^0.1.0",
-    "hbs": "^4.0.1",
-    "html-trim": "^1.2.0",
-    "jsonwebtoken": "^7.4.1",
-    "marked": "^0.3.6",
-    "moment": "^2.18.1",
-    "mongoose": "^4.9.6",
-    "morgan": "^1.8.1",
-    "serve-favicon": "^2.4.2",
     "simplemde": "^1.11.2",
     "simplemde-theme-base": "^0.1.2",
     "trim-html": "^0.1.9",
